syntax = "proto3";

package quota;

option go_package = "proto;quota";

service Quota {
	// Creates a quota
	rpc Create(CreateRequest) returns (CreateResponse) {}
	// Registers a user against a quota
	rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {}
	// Lists current quota usage
	rpc List(ListRequest) returns (ListResponse) {}
}

message CreateRequest {
	string id = 1; // Could be a URL or something else
	int64 limit = 2;
	enum Frequency {
		NEVER = 0;
		DAILY = 1;
		MONTHLY = 2;
	}
	Frequency reset_frequency = 3;
	string path = 4;
}

message CreateResponse {}

message RegisterUserRequest {
	repeated string quota_ids = 1;
	string user_id = 2;
}

message RegisterUserResponse {}

message ListRequest {
	string user_id = 1;
}

message ListResponse {
	repeated QuotaUsage usages = 1;
}

message QuotaUsage {
	string name = 1; // name of the quota e.g. "locations" or "storage"
	int64 usage = 2; // amount used in base units e.g. 100 (hits) or 200 (MB)
	int64 limit = 3; // limit for the period e.g. 10000 (hits) or 1024 (MB)
}